About box improvements
Improve appearance of about box
Include license info
Update Copyright/Company info
Add check for latest version
#13

--- a/DBADashService/Properties/Resources.resx
+++ b/DBADashService/Properties/Resources.resx
@@ -126,6 +126,7 @@
 |  |____/ |____//_/   \_\ |____/  \__,_||___/|_| |_|     |
 |                                                        |
 |	    SQL Server Monitoring by David Wiseman       |
+|                     Copyright 2022 Trimble, Inc.       |
 |				       dbadash.com       |
 |	   https://github.com/trimble-oss/dba-dash       |
 |                                                        |
