Use consistent language for Hidden instances
Manage Instance dialog now shows "Hidden" instead of "Show In Summary"
Summary grid now shows "Hidden" instead of Visible.
Options menu remains "Show Hidden"
ShowInSummary is still used in repository DB.
#483

--- a/DBADashGUI/Checks/Summary.resx
+++ b/DBADashGUI/Checks/Summary.resx
@@ -60,7 +60,7 @@
   <metadata name="Instance.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="colShowInSummary.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="colHidden.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="MemoryDumpStatus.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
