RunningJobs collection added
Added Running Jobs collection.
Added Running Jobs to GUI
Job History improvements.  Added Finish date.  Link added to find running queries.
Updated icons in tree.

--- a/DBADashGUI/Main.resx
+++ b/DBADashGUI/Main.resx
@@ -18,7 +18,7 @@
     <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
     <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
     <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
-    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing"">Blue</data>
     <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
         <value>[base64 mime encoded serialized .NET Framework object]</value>
     </data>
@@ -124,9 +124,9 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
-        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAhBwAAAJNU0Z0AUkBTAIBARYB
-        AAFAARYBQAEWARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMAAUADAAFgAwABAQEAAQgG
-        AAEYGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEAAfABygGmAQABMwUAATMB
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAA1B0AAAJNU0Z0AUkBTAIBARgB
+        AAGoARYBqAEWARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMAAUADAAFwAwABAQEAAQgG
+        AAEcGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEAAfABygGmAQABMwUAATMB
         AAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEAAYABfAH/AQACUAH/AQAB
         kwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFmAwABmQMAAcwCAAEzAwAC
         MwIAATMBZgIAATMBmQIAATMBzAIAATMB/wIAAWYDAAFmATMCAAJmAgABZgGZAgABZgHMAgABZgH/AgAB
@@ -153,100 +153,106 @@
         AAH/AcwBMwEAAf8BzAFmAQAB/wHMAZkBAAH/AswBAAH/AcwB/wEAAv8BMwEAAcwB/wFmAQAC/wGZAQAC
         /wHMAQACZgH/AQABZgH/AWYBAAFmAv8BAAH/AmYBAAH/AWYB/wEAAv8BZgEAASEBAAGlAQADXwEAA3cB
         AAOGAQADlgEAA8sBAAOyAQAD1wEAA90BAAPjAQAD6gEAA/EBAAP4AQAB8AH7Af8BAAGkAqABAAOAAwAB
-        /wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA/9XAAL/AfQB8wH/JQAP9AMAAv8B8gHtAbwBkgHqAe0B
-        bQH0JAAB9A2KAfQBAAH/AfABvAHvAZIB8gG8AQcBVgHsAesB7QG8Af8iAAH0DYoB9AEAAQcBvAHwAfMB
-        9AHzAfABvAHtAfEBvAHtAewB6wH0IQAB9A2KAfQBAAK8AfEB8gHvAewB7wHwAQcB7wEHAfIBBwLtAfIg
-        AAH0DYoB9AIAAe8B8wH2AfMBBwPxAbwBBwGSAfcB8gLvIAAB9A2KAfQEAAHxAQcC/wH0AfMB8gHxAfAB
-        vAEHAvAgAAH0DYoB9AcAAbwB8QHqAZIB8AIHAfQiAAH0DYoB9DEAAfQNigH0MQAB9A2KAfQxAAH0AYoG
-        9AKKBfQxAAH0CIoBAAH0NQAK9AH/dQAB/w/0CAAB/wH0AfMB9AH/AvMB/wEAD/QBAAH0Bv8B9AcAAfQB
-        2wSzAdsBkgcUAfQHAAH/AfQBbwFGAvMCRgHzAfQB8QFtBRQBEwEHAZIEFAL0Af8BvATsAbwB/wH0BgAB
-        9AazAfMG9AEUCvQBbwEkAkYBJAFGAfMB9AFtAe0B8wT0AQcBEwT0ARQB9AH/Ae0G7AHtAf8GAAH0BrMH
-        9AEUAvQIFAHvAW8CJAFGAfMB/wH0ARQB8gT0AfMBBwETAfICFAH0ARQB9AH/COwH/wH0BrMB9AUUAfQB
-        FAL0ARQH9AHzAUYCJAFGAfMC9AFtAe0B8gHzAvQB7AETAQcB8wP0ARQB9AH/COwB/wXsAf8B9AazB/QB
-        FAL0ARQB9AIUAfQCFAHvAUYBJAFGAW8BJAFGAfMB9AHxAW0BFAHsAfEBBwETAfAB9wMUAfQBFAH0Af8I
-        7AH/A+wB/wHsAf8B9AazAfQFFAH0ARQC9AEUB/QBbwFGAfMB9AJvAfQBAAL0AfIB6wEUARIB7wb0ARQB
-        9AH/COwB/wXsAf8B9AGzARkC9AEZAbMH9AEUAvQBFAH0BRQB9ALvARQC9AHvAfQDAAT0AZIB8wX0ARQB
-        9AH/A+wCBwPsAf8F7AH/AfQB2wSzAdsBkgUUAfQBFAL0ARQM9AEUAfQGAAH0ARQG9AEUAfQB/wHsAfQE
-        /wH0AewB/wXsAv8D9AG8CfQBFAL0ARQB9AUUAfQCFAP0ARQB9AYAAfQBFAb0ARQB9AH/Ae0B9AT/AfQB
-        7QH/BewB/wMAAfQBFAH0AxQB9AUUAvQBFAz0ARQB9AYAAfQBFAb0ARQC9AH/AbwB7AIHAewBvAL/BewB
-        /wMAAfQBFAX0ARQB9AHzAW0BEwL0ARQM9AEUAfQGAAH0ARQG9AEUAfQBAAH0DP8B7AH/AwAB9AEUBfQB
-        FAHzAW0BEwHwAvQOFAH0BgAB9AEUAfQEFAH0ARQB9AcAAf8H7AH/AwAB9AEUBfQBFAFtARMB8AH0AQAB
-        9A4UAfQGAAH0ARQG9AEUAfQHAAH/AewF/wHsAf8DAAH0BxQBEwHwAfQCAAH0DhQB9AYAAfQBbQYUAW0B
-        9AcAAf8H7AH/AwAK9AMAEPQGAAr0BwAJ/w70CAAB/wP0Af8GAAf0CAAP9AEAAfQMFAH0BgAB/wL0AZIB
-        EwH3AvQEAAH0ARkBuQOzAbkBGQH0BwAB9AesAbQBbQQUAfQBAAH0DBQD9AMAAvQBBwHqAW0BFAHqAW0B
-        8gH0Af8CAAH0B7MB9AcAAfQBswKtAfMB/wHzAawBswT0ARQB9AEAAfQBFAT0ARQB9AIUAfAB7wEUAfQB
-        bQH0AQAB/wH0AfIB7AETAe8B8gEUAfMB7AETAQcB9AH/AQAB9AOzARkB2wKzAfQHAAH0AbQBswHzAa0E
-        rAHzA/QBFAH0AQAB9AEUAfQGFAESAfQBEgEUAfQBFAH0AQAB9AHvARMB7AHyAfQB8gEUAvQBBwESAewB
-        9AEAAfQCswEJBfQHAAH0AQkBrAG0ARkBrQOsAQkD9AEUAfQBAAH0ARQB9AQUAfQBFAHvAfACFAH0ARQB
-        9AEAAfQBFAEHA/QB8gEUA/QB8QEUAfQBAAH0A7MBGQHbArMH9AEAAf8B8gGsAa0C8wOsAbQD9AEUAfQB
-        AAH0ARQE9AMUAfMB7AIUAfQBFAH0AQAB9AEUBPQB8gEUA/QB8gEUAfQBAAH0ArMB2wHcAdsCswH0AbkD
-        swG5ARkB9AEAAfQCswHzBKwBswP0ARQB9AEAAfQMFAH0ARQB9AEAAfQBFAT0AfIBFAP0AfIBFAH0AQAB
-        9AG6BfQBugH0BrMB9AEAAfQBtAasAa0D9AEUAfQBAA70ARQB9AEAAfQBFAP0AfEB7AEUAewB8gH0AfIB
-        FAH0AQAB9AG6BfQB2wH0AbMB2wEZA7MB9AEAAf8L9AEUAfQFAAH0ARMI9AEUAfQBAAH0ARQB9AHyAe0B
-        EwHsAfAB7AETAe8B8gEUAfQBAAH0ARkC2wHcAtsBGQT0AQkCswH0AgAB9AEUCfQBFAH0BQAB9AETCPQB
-        FAH0AQAB9AEUAfcBEwHrAfAD9AEHAeoBbQEUAfQCAAf0ArMB2wEZA7MB9AIAAfQBFAX0BRQB9AUAAfQB
-        EwX0BBQB9AEAAfQBFAETAQcG9AHzAW0BFAH0CAAB9AKzAdsB3AHbArMB9AIAAfQBFAX0ARQB9AHzAm0B
-        9AUAAfQBEwX0AxQBkgH0AQAB9AEHAuoB7wT0AQcBbQHqAe8B9AgAAfQBugX0AboB9AIAAfQBFAX0ARQB
-        8wJtAfMB9AUAAfQBEwX0AhQB7wH0AgAB/wL0Ae8C6gHvAbwB6wESAe8C9AH/CAAB9AG6BfQB2wH0AgAB
-        9AEUBfQBFAJtAfMB9AYAAfQB6gYUAQcB9AUAAf8C9AHvAeoBEwGSAfMB9AH/CgAB9AEZAtsB3ALbARkB
-        9AIAAfQHFAFtAfMB9AcACfQIAAH/AvQB8wH0Af8NAAf0AwAK9BQAAf8C9ATzBfQB/wQAAf8C9AH/EQAB
-        /xkAAfQB7wETBBQBEwH3AQkB2wEJAfMB9AH/AQAB/wH0Au8B9AH/DwAD9BgAAfQBEwHzBPQB8wEUAfMD
-        swEZAfQBAAH0Ae8CFAHvC/QEAAH0AfEB6wHyAfQIAAH/AfQL/wH0AQAB9AHqAQcE9AH3AW0BGQSzAfQB
-        AAH0ARQC7wEUAe8B9AgUAfQDAAH0AfEB6gHrAW0B8gX0AgAB/wH0AQkKswHbA/QB8QHqAfAB9AIHARIB
-        8wG5BLMB9AEAAf8D9AHvARQB7wn0AgAB9AHxAeoB7wH0AZIBbQHyAewBEwHsAfEB9AEAAfQBCQGzARkI
-        /wH0AtsB/wEAAfQB8AFtARMB7AGSAfAB2wWzAfQCAAH/A/QC7wH0Af8IAAH0AfEB6gHvA/QBkgFtAvIB
-        9wESAfEB9AH/AbkBGQr/AfQBswH/AQAB9AHbARkB8wEJAdsBuQazAfQBAAH/AfQC7wP0Af8IAAH0AfEB
-        6gHvBfQBkgFtAfIB9AH3AesB9AH/AbML/wEZAbMB/wEAAfQMswH0AQAB9AHvAhQB7wz0AusH9AGSAW0C
-        8gETAfQB/wGzARkI/wEZAdsBswEJAfQBAAH0DLMB9AEAAfQBFALvARQB7wH0CBQC9AHyAW0Bkgf0AZIB
-        6wHyARMC9AHcAdoB9Af/AtsBGQH0Af8BAAH0DLMB9AEAAf8D9AHvARQB7wn0AQAB9AHyAW0Bkgf0AQcB
-        9wHrAfQC/wHbAbMBuQGzBP8B9AGzARkB9AH/AgAB9AKzAboBCQHyAvMB8gEJAboCswH0AgAB/wP0Au8B
-        9AH/CQAB9AHyAW0BkgX0AfIB9wESAfEB9AEAAf8C9AEZAdsB2gEZAf8BGQGzAdwB9AMAAf8B9AGzAQkI
-        9AEJAbMB9AEAAf8B9ALvA/QB/wsAAfQB8gFtAZID9AHvARMB7AHxAfQEAAH/AfQB/wHcA7MB3AL/BAAB
-        9AGzAQkI9AEJAbMB9AEAAfQB7wIUAe8L9AQAAfQB8gFtAZIE9AEHAfQHAAH/AfQD/wH0Af8FAAH0ARkB
-        swG6AQkB8gLzAfIBCQG6AbMBGQH0AQAB9AEUAu8BFAHvAfQIFAH0BQAB9AHyAW0FFAH0EwAB/wH0AfMB
-        CQG6BLMBugEJAfMB9AH/AQAB/wP0Ae8BFAHvCfQGAAj0FQAB/wj0Af8EAAP/AfQC7wH0Af8nAAf0DQAC
-        9BMAAf8F9AH/AQAQ9AETAxQBEwr0BAAC7BMAAfQBCQOzAQkB9AEAAfQNFAL0AxQB9AEUAfQIFAP0ARsB
-        8wJtAfMGGwH0Af8KAAH0BbMB9AEAAfQBFAP0ARQD9AEUA/QBFAP0AZIC9AEUCPQBFAL0AZkBeQEaAm0B
-        GgZ5ARoB9AMAAf8GAAH0BbMB9AEAAfQBFAP0ARQD9AEUA/QBFAH0AQAB9AEUAvQBFAL0BRQB9AEUAvQB
-        eQGZARoCbQEaBnkBmQH0AQAE9AH/BAAB9AGzAdsBCQHbAbMB9AEAAfQNFAH0AQAB8wEUAvQCFAf0ARQC
-        9AF5AfMB8AITAbwBmQZ5ARsC9AGzAYoBCQH0Af8CAAH/AfQB3AP0AdwB9AEAAfQBFAP0ARQD9AEUA/QB
-        FAH0AQAB8wETAxQBEwHwAfQDFAL0ARQC9AGZAe8BEwIUARMB7wGZBXkBGgL0A4oBCQH0Af8CAAH0AQkB
-        3AEJAdwBCQH0AQAB9AEUA/QBFAP0ARQD9AEUAfQBAAH0AQcL9AEUAvQB7wYUAe8BGgR5AZkC9AEJA4oB
-        CQn0Af8BAAH0DRQB9AEAAfQBFAH0BBQB9AIUA/QBFAL0CBQE9AF5AvQB/wH0AQkFigGLAbsB9AH/BQAB
-        9AEUA/QBFAP0ARQD9AEUAfQBAAH0ARQL9AEUDvQBeQL0AQAB/wH0AQkGigG7AfQFAAH0ARQD9AEUA/QB
-        FAP0ARQB9AEAAfQBFAH0BBQG9AEUAvQBeQv0AXkB9AMAAf8B9AGLA4oBiwGKAYsB9AUAAfQNFAH0AQAB
-        9AEUC/QBFAL0AXkG9AEaBHkBmQHzBAAB9AOKAbQB9AGLAYoB9AH/BAAB9A0UAfQBAAH0DRQC9AF5BvQB
-        mQEaBfQEAAH0AYsCigP0AbMB9AUAAfQNFAH0AQAB9A0UAvQBmQZ5AZkE9AH/BQAB9AG7AooBiwT0BQAP
-        9AEAAfQNFAv0CQAB/wH0AbsBiwGKAbMC9AH/FQAP9AEAAf8H9AH/CgAB/wX0Af8FAAj0CQAI9AoAAf8I
-        9AH/EwAB9AYUAfQIAAH0ARkB2wSzAdsBGQH0CAAC9AEJAdsEswHbAQkC9BIAAfQEFAH0ARQB9AgAAfQI
-        swH0CAAB9AG6CLMBugH0AgAP9AEAAfQGFAH0CAAB9AizB/QCAAH0CrMB9AIAAfQBmQt5AZkB9AEAAfQG
-        FAj0AQAB9AizAfQFFAH0AgAB9AqzAfQCAAH0DXkB9AEAAfQGFAH0AdsEswHbARkC9AizAfQDFAH0ARQB
-        9AIAAfQKswH0AgAB9A15AfQBAAH0ARQE9AEUAfQHswL0CLMB9AUUAfQCAAH0CrMB9AIAAfQNeQH0AQAB
-        9AYUAfQHswL0A7MCugOzAfQFFAH0AgAB9AqzAfQCAAH0DXkB9AEAAfQBFAT0ARQB9AezAvQBswEJBPQB
-        CQGzAfQFFAH0AgAB9AqzAfQCAAH0DXkB9AEAAfQGFAH0B7MC9AGzAQkE9AEJAbMB9AUUAfQCAAH0CrMB
-        9AIAAfQNeQH0AQAI9AezAvQBGQHbAbMCugGzAdsB8AH0BRQB9AIAAfQKswH0AgAB9A15AfQHAAH0A7MC
-        ugOzAfQBAA30ARQB9AIAAfQDswTbA7MB9AIAAfQMeQGZAfQHAAH0AbMBCQT0AQkBswH0BwAB9AcUAfQC
-        AAH0AbMBCQb0AQkBswH0AgAB9AF5BvQBGgGZBfQHAAH0AbMBCQT0AQkBswH0BwAB9AEUBfQBFAH0AgAB
-        9AG6AbkBCQEZAvMBGQEJAbkBugH0AgAB9AGZB3kBGwH0CwAB9AEZAdsBswK6AbMB2wEZAfQHAAH0BxQB
-        9AIAAvQBCQHbBLMB2wEJAvQCAAr0Af8MAAj0CAAJ9AMAAf8I9AH/EwABQgFNAT4HAAE+AwABKAMAAUAD
-        AAFgAwABAQEAAQEGAAEDFgAD/wEABP8EAAL/AfwBHwUAAQEBwAEPBQABAQEAAQMFAAEBAQABAQUAAQEH
-        AAEBAYAGAAEBAeAGAAEBAfwBAwUAAQEC/wUAAQEC/wUAAQEC/wUAAQEC/wUAAR8C/wUAAR8C/wQABP8G
-        AAH/AQABgAEAAYABfwIAAf4EAAE/BwABPxwAAYAHAAHgBwAB/AcAAfwDAAHgAwAB/AMAAeADAAH8AQAB
-        gAEAAeADAAH8AQAB/gEAAeABAQIAAfwBAAH+AQAB4AEDAgAB/AEAAf4BAAHgAQcCAAH8AQAB/gIAAQMB
-        /AEfAYAB/wEAAQEBAAEDAfABDwEAAX8BAAEBAgAB4AEDAQABfwEAAQECAAGAAQEBAAF/AQABAQIAAYAB
-        AQEAAX8BAAEBAgABgAEBAQABAQEAAQECAAGAAQECAAGAAQECAAGAAQECAAGAAQECAAGAAQECAAGAAQEB
-        8AEAAYABAQIAAcABAQHwAQABgAEBAYABAAHAAQEB8AEAAYABAQH+AQABwAEBAfABAAGAAQEB/gEAAcAB
-        AQHwAQEBgAEBAf4BAAHAAQMB8AEDAeABBwH+AQABwAEHAfABBwH4AR8B/wEBAcABDwL/AQABBwGHAf8B
-        /QP/AQABAQEDAf8B+AP/AQABAQIAAfABfwGAAQEBAAEBAgAB4AEDAwABAQIAAcABAQIAAYABAQGAAX8B
-        gAMAAYABAQEAAf8EAAGAAQEGAAGAAQEGAAGAAQECAAGAAgABAQGAAQEBgAF/AcABAAGAAQcBAAEBAQAB
-        /wHgAQEB4AEHAYABAQIAAfABAwH4AQ8BgAEBAgAB+AEDAv8BgAEBAgAB/AEDAv8B4AEHAYABfwT/AQEB
-        /wHzAv8CgAMAAfMC/wKABAABAQH/AoAEAAEBAd8CgAEAAYACAAEBAQcCgAEAAYADAAEDAQABgAEAAYAD
-        AAEBAoABAAGABQABgAEAAYAEAAEPAYABAAGAAwABgAEPAYABAAGAAgABAQHAAQ8BgAEAAYACAAEBAeAB
-        BwGAAQABgAIAAQEB4AEPAYABAAGAAgABAwHgAQ8BgAEAAYACAAE/AeABDwL/AYABAAGAAT8B8AEfAQAB
-        /wGAAX8B4AEHAv8BAAH/AQABPwHAAQMC/wEAAf8BAAE/AcABAwEAAQEBAAH/AgABwAEDAQABAQEAAQEC
-        AAHAAQMBAAEBBAABwAEDAQABAQQAAcABAwEAAQEEAAHAAQMBAAEBBAABwAEDAQABAQQAAcABAwEAAQEE
-        AAHAAQMBAAEBAfwBAAGAAQABwAEDAQABAQH8AQAB/gEAAcABAwEAAQEB/AEAAf4BAAHAAQMBAAEfAfwB
-        AAH+AQABwAEDAQABHwH+AQEB/gEAAeABBwL/Cw==
+        /wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA///AP8A/wD/AFsAAv8B9AHzAf8GAA/0EAAP9AMAAv8B
+        8gHtAbwBkgHqAe0BbQH0BQAB9A0UEvQNigH0AQAB/wHwAbwB7wGSAfIBvAEHAVYB7AHrAe0BvAH/AwAB
+        9AEUC/QBFAL0BhQC9AYUAvQNigH0AQABBwG8AfAB8wH0AfMB8AG8Ae0B8QG8Ae0B7AHrAfQCAAH0ARQB
+        9AEUAfQBFAH0ARQB9ANMAfQBFAL0BBQB9AEUAvQEFAH0ARQC9A2KAfQBAAK8AfEB8gHvAewB7wHwAQcB
+        7wEHAfIBBwLtAfIBAAH0ARQH9ANMAfQBFAL0BhQC9AYUAvQNigH0AgAB7wHzAfYB8wEHA/EBvAEHAZIB
+        9wHyAu8BAAH0ARQB9AEUAfQBFAH0ARQB9ANMAfQBFAL0BhQC9AYUAvQNigH0BAAB8QEHAv8B9AHzAfIB
+        8QHwAbwBBwLwAQAB9AEUC/QBFAL0DhQC9A2KAfQHAAG8AfEB6gGSAfACBwH0AwAB9AEUAfQBFAH0ARQB
+        9AEUAfQBFAH0ARQB9AEUAvQGFAL0BhQC9A2KAfQSAAH0ARQL9AEUAvQBFAT0ARQC9AEUBPQBFAL0DYoB
+        9BIAAfQNFAL0BhQC9AYUAvQNigH0EgAB9AIUAW0B8AETBBQB8AHqAhQC9AEUBPQBFAL0ARQE9AEUAvQB
+        igb0AooF9BIAAfQCFAHxAfQFFAH0AfECFAL0BhQC9AYUAvQIigEAAfQWAAH0AhQB6gHwBRQB8AFtAhQb
+        9AH/FgAB9A0UAfQxAA/0EAAB/w/0CAAB/wH0AfMB9AH/AvMB/wEAD/QBAAH0Bv8B9AcAAfQB2wSzAdsB
+        kgcUAfQHAAH/AfQBbwFGAvMCRgHzAfQB8QFtBRQBEwEHAZIEFAL0Af8BvATsAbwB/wH0BgAB9AazAfMG
+        9AEUCvQBbwEkAkYBJAFGAfMB9AFtAe0B8wT0AQcBEwT0ARQB9AH/Ae0G7AHtAf8GAAH0BrMH9AEUAvQI
+        FAHvAW8CJAFGAfMB/wH0ARQB8gT0AfMBBwETAfICFAH0ARQB9AH/COwH/wH0BrMB9AUUAfQBFAL0ARQH
+        9AHzAUYCJAFGAfMC9AFtAe0B8gHzAvQB7AETAQcB8wP0ARQB9AH/COwB/wXsAf8B9AazB/QBFAL0ARQB
+        9AIUAfQCFAHvAUYBJAFGAW8BJAFGAfMB9AHxAW0BFAHsAfEBBwETAfAB9wMUAfQBFAH0Af8I7AH/A+wB
+        /wHsAf8B9AazAfQFFAH0ARQC9AEUB/QBbwFGAfMB9AJvAfQBAAL0AfIB6wEUARIB7wb0ARQB9AH/COwB
+        /wXsAf8B9AGzARkC9AEZAbMH9AEUAvQBFAH0BRQB9ALvARQC9AHvAfQDAAT0AZIB8wX0ARQB9AH/A+wC
+        BwPsAf8F7AH/AfQB2wSzAdsBkgUUAfQBFAL0ARQM9AEUAfQGAAH0ARQG9AEUAfQB/wHsAfQE/wH0AewB
+        /wXsAv8D9AG8CfQBFAL0ARQB9AUUAfQCFAP0ARQB9AYAAfQBFAb0ARQB9AH/Ae0B9AT/AfQB7QH/BewB
+        /wMAAfQBFAH0AxQB9AUUAvQBFAz0ARQB9AYAAfQBFAb0ARQC9AH/AbwB7AIHAewBvAL/BewB/wMAAfQB
+        FAX0ARQB9AHzAW0BEwL0ARQM9AEUAfQGAAH0ARQG9AEUAfQBAAH0DP8B7AH/AwAB9AEUBfQBFAHzAW0B
+        EwHwAvQOFAH0BgAB9AEUAfQEFAH0ARQB9AcAAf8H7AH/AwAB9AEUBfQBFAFtARMB8AH0AQAB9A4UAfQG
+        AAH0ARQG9AEUAfQHAAH/AewF/wHsAf8DAAH0BxQBEwHwAfQCAAH0DhQB9AYAAfQBbQYUAW0B9AcAAf8H
+        7AH/AwAK9AMAEPQGAAr0BwAJ/w70CAAB/wP0Af8GAAf0CAAP9AEAAfQMFAH0BgAB/wL0AZIBEwH3AvQE
+        AAH0ARkBuQOzAbkBGQH0BwAB9AesAbQBbQQUAfQBAAH0DBQD9AMAAvQBBwHqAW0BFAHqAW0B8gH0Af8C
+        AAH0B7MB9AcAAfQBswKtAfMB/wHzAawBswT0ARQB9AEAAfQBFAT0ARQB9AIUAfAB7wEUAfQBbQH0AQAB
+        /wH0AfIB7AETAe8B8gEUAfMB7AETAQcB9AH/AQAB9AOzARkB2wKzAfQHAAH0AbQBswHzAa0ErAHzA/QB
+        FAH0AQAB9AEUAfQGFAESAfQBEgEUAfQBFAH0AQAB9AHvARMB7AHyAfQB8gEUAvQBBwESAewB9AEAAfQC
+        swEJBfQHAAH0AQkBrAG0ARkBrQOsAQkD9AEUAfQBAAH0ARQB9AQUAfQBFAHvAfACFAH0ARQB9AEAAfQB
+        FAEHA/QB8gEUA/QB8QEUAfQBAAH0A7MBGQHbArMH9AEAAf8B8gGsAa0C8wOsAbQD9AEUAfQBAAH0ARQE
+        9AMUAfMB7AIUAfQBFAH0AQAB9AEUBPQB8gEUA/QB8gEUAfQBAAH0ArMB2wHcAdsCswH0AbkDswG5ARkB
+        9AEAAfQCswHzBKwBswP0ARQB9AEAAfQMFAH0ARQB9AEAAfQBFAT0AfIBFAP0AfIBFAH0AQAB9AG6BfQB
+        ugH0BrMB9AEAAfQBtAasAa0D9AEUAfQBAA70ARQB9AEAAfQBFAP0AfEB7AEUAewB8gH0AfIBFAH0AQAB
+        9AG6BfQB2wH0AbMB2wEZA7MB9AEAAf8L9AEUAfQFAAH0ARMI9AEUAfQBAAH0ARQB9AHyAe0BEwHsAfAB
+        7AETAe8B8gEUAfQBAAH0ARkC2wHcAtsBGQT0AQkCswH0AgAB9AEUCfQBFAH0BQAB9AETCPQBFAH0AQAB
+        9AEUAfcBEwHrAfAD9AEHAeoBbQEUAfQCAAf0ArMB2wEZA7MB9AIAAfQBFAX0BRQB9AUAAfQBEwX0BBQB
+        9AEAAfQBFAETAQcG9AHzAW0BFAH0CAAB9AKzAdsB3AHbArMB9AIAAfQBFAX0ARQB9AHzAm0B9AUAAfQB
+        EwX0AxQBkgH0AQAB9AEHAuoB7wT0AQcBbQHqAe8B9AgAAfQBugX0AboB9AIAAfQBFAX0ARQB8wJtAfMB
+        9AUAAfQBEwX0AhQB7wH0AgAB/wL0Ae8C6gHvAbwB6wESAe8C9AH/CAAB9AG6BfQB2wH0AgAB9AEUBfQB
+        FAJtAfMB9AYAAfQB6gYUAQcB9AUAAf8C9AHvAeoBEwGSAfMB9AH/CgAB9AEZAtsB3ALbARkB9AIAAfQH
+        FAFtAfMB9AcACfQIAAH/AvQB8wH0Af8NAAf0AwAK9BQAAf8C9ATzBfQB/wQAAf8C9AH/EQAB/xkAAfQB
+        7wETBBQBEwH3AQkB2wEJAfMB9AH/AQAB/wH0Au8B9AH/DwAD9BgAAfQBEwHzBPQB8wEUAfMDswEZAfQB
+        AAH0Ae8CFAHvC/QEAAH0AfEB6wHyAfQIAAH/AfQL/wH0AQAB9AHqAQcE9AH3AW0BGQSzAfQBAAH0ARQC
+        7wEUAe8B9AgUAfQDAAH0AfEB6gHrAW0B8gX0AgAB/wH0AQkKswHbA/QB8QHqAfAB9AIHARIB8wG5BLMB
+        9AEAAf8D9AHvARQB7wn0AgAB9AHxAeoB7wH0AZIBbQHyAewBEwHsAfEB9AEAAfQBCQGzARkI/wH0AtsB
+        /wEAAfQB8AFtARMB7AGSAfAB2wWzAfQCAAH/A/QC7wH0Af8IAAH0AfEB6gHvA/QBkgFtAvIB9wESAfEB
+        9AH/AbkBGQr/AfQBswH/AQAB9AHbARkB8wEJAdsBuQazAfQBAAH/AfQC7wP0Af8IAAH0AfEB6gHvBfQB
+        kgFtAfIB9AH3AesB9AH/AbML/wEZAbMB/wEAAfQMswH0AQAB9AHvAhQB7wz0AusH9AGSAW0C8gETAfQB
+        /wGzARkI/wEZAdsBswEJAfQBAAH0DLMB9AEAAfQBFALvARQB7wH0CBQC9AHyAW0Bkgf0AZIB6wHyARMC
+        9AHcAdoB9Af/AtsBGQH0Af8BAAH0DLMB9AEAAf8D9AHvARQB7wn0AQAB9AHyAW0Bkgf0AQcB9wHrAfQC
+        /wHbAbMBuQGzBP8B9AGzARkB9AH/AgAB9AKzAboBCQHyAvMB8gEJAboCswH0AgAB/wP0Au8B9AH/CQAB
+        9AHyAW0BkgX0AfIB9wESAfEB9AEAAf8C9AEZAdsB2gEZAf8BGQGzAdwB9AMAAf8B9AGzAQkI9AEJAbMB
+        9AEAAf8B9ALvA/QB/wsAAfQB8gFtAZID9AHvARMB7AHxAfQEAAH/AfQB/wHcA7MB3AL/BAAB9AGzAQkI
+        9AEJAbMB9AEAAfQB7wIUAe8L9AQAAfQB8gFtAZIE9AEHAfQHAAH/AfQD/wH0Af8FAAH0ARkBswG6AQkB
+        8gLzAfIBCQG6AbMBGQH0AQAB9AEUAu8BFAHvAfQIFAH0BQAB9AHyAW0FFAH0EwAB/wH0AfMBCQG6BLMB
+        ugEJAfMB9AH/AQAB/wP0Ae8BFAHvCfQGAAj0FQAB/wj0Af8EAAP/AfQC7wH0Af8nAAf0DQAC9BMAAf8F
+        9AH/AQAQ9AETAxQBEwr0BAAC7BMAAfQBCQOzAQkB9AEAAfQNFAL0AxQB9AEUAfQIFAP0ARsB8wJtAfMG
+        GwH0Af8KAAH0BbMB9AEAAfQBFAP0ARQD9AEUA/QBFAP0AZIC9AEUCPQBFAL0AZkBeQEaAm0BGgZ5ARoB
+        9AMAAf8GAAH0BbMB9AEAAfQBFAP0ARQD9AEUA/QBFAH0AQAB9AEUAvQBFAL0BRQB9AEUAvQBeQGZARoC
+        bQEaBnkBmQH0AQAE9AH/BAAB9AGzAdsBCQHbAbMB9AEAAfQNFAH0AQAB8wEUAvQCFAf0ARQC9AF5AfMB
+        8AITAbwBmQZ5ARsC9AGzAYoBCQH0Af8CAAH/AfQB3AP0AdwB9AEAAfQBFAP0ARQD9AEUA/QBFAH0AQAB
+        8wETAxQBEwHwAfQDFAL0ARQC9AGZAe8BEwIUARMB7wGZBXkBGgL0A4oBCQH0Af8CAAH0AQkB3AEJAdwB
+        CQH0AQAB9AEUA/QBFAP0ARQD9AEUAfQBAAH0AQcL9AEUAvQB7wYUAe8BGgR5AZkC9AEJA4oBCQn0Af8B
+        AAH0DRQB9AEAAfQBFAH0BBQB9AIUA/QBFAL0CBQE9AF5AvQB/wH0AQkFigGLAbsB9AH/BQAB9AEUA/QB
+        FAP0ARQD9AEUAfQBAAH0ARQL9AEUDvQBeQL0AQAB/wH0AQkGigG7AfQFAAH0ARQD9AEUA/QBFAP0ARQB
+        9AEAAfQBFAH0BBQG9AEUAvQBeQv0AXkB9AMAAf8B9AGLA4oBiwGKAYsB9AUAAfQNFAH0AQAB9AEUC/QB
+        FAL0AXkG9AEaBHkBmQHzBAAB9AOKAbQB9AGLAYoB9AH/BAAB9A0UAfQBAAH0DRQC9AF5BvQBmQEaBfQE
+        AAH0AYsCigP0AbMB9AUAAfQNFAH0AQAB9A0UAvQBmQZ5AZkE9AH/BQAB9AG7AooBiwT0BQAP9AEAAfQN
+        FAv0CQAB/wH0AbsBiwGKAbMC9AH/FQAP9AEAAf8H9AH/CgAB/wX0Af8FAAj0CQAI9AoAAf8I9AH/EwAB
+        9AYUAfQIAAH0ARkB2wSzAdsBGQH0CAAC9AEJAdsEswHbAQkC9BIAAfQEFAH0ARQB9AgAAfQIswH0CAAB
+        9AG6CLMBugH0AgAP9AEAAfQGFAH0CAAB9AizB/QCAAH0CrMB9AIAAfQBmQt5AZkB9AEAAfQGFAj0AQAB
+        9AizAfQFFAH0AgAB9AqzAfQCAAH0DXkB9AEAAfQGFAH0AdsEswHbARkC9AizAfQDFAH0ARQB9AIAAfQK
+        swH0AgAB9A15AfQBAAH0ARQE9AEUAfQHswL0CLMB9AUUAfQCAAH0CrMB9AIAAfQNeQH0AQAB9AYUAfQH
+        swL0A7MCugOzAfQFFAH0AgAB9AqzAfQCAAH0DXkB9AEAAfQBFAT0ARQB9AezAvQBswEJBPQBCQGzAfQF
+        FAH0AgAB9AqzAfQCAAH0DXkB9AEAAfQGFAH0B7MC9AGzAQkE9AEJAbMB9AUUAfQCAAH0CrMB9AIAAfQN
+        eQH0AQAI9AezAvQBGQHbAbMCugGzAdsB8AH0BRQB9AIAAfQKswH0AgAB9A15AfQHAAH0A7MCugOzAfQB
+        AA30ARQB9AIAAfQDswTbA7MB9AIAAfQMeQGZAfQHAAH0AbMBCQT0AQkBswH0BwAB9AcUAfQCAAH0AbMB
+        CQb0AQkBswH0AgAB9AF5BvQBGgGZBfQHAAH0AbMBCQT0AQkBswH0BwAB9AEUBfQBFAH0AgAB9AG6AbkB
+        CQEZAvMBGQEJAbkBugH0AgAB9AGZB3kBGwH0CwAB9AEZAdsBswK6AbMB2wEZAfQHAAH0BxQB9AIAAvQB
+        CQHbBLMB2wEJAvQCAAr0Af8MAAj0CAAJ9AMAAf8I9AH/EwABQgFNAT4HAAE+AwABKAMAAUADAAFwAwAB
+        AQEAAQEFAAGAAQMWAAP/gQAK/wH8AR8BgAEAAv8BAAEBAcABDwGABAABAQEAAQMBgAQAAQEBAAEBAYAE
+        AAEBAgABgAQAAQEBgAEAAYAEAAEBAeABAAGABAABAQH8AQMBgAQAAQEC/wGABAABAQL/AYAEAAEBAv8B
+        gAQAAQEC/wGABAABHwL/AYAEAAEfAv8BgAEABv8BgAEAAv8CAAH/AQABgAEAAYABfwIAAf4EAAE/BwAB
+        PxwAAYAHAAHgBwAB/AcAAfwDAAHgAwAB/AMAAeADAAH8AQABgAEAAeADAAH8AQAB/gEAAeABAQIAAfwB
+        AAH+AQAB4AEDAgAB/AEAAf4BAAHgAQcCAAH8AQAB/gIAAQMB/AEfAYAB/wEAAQEBAAEDAfABDwEAAX8B
+        AAEBAgAB4AEDAQABfwEAAQECAAGAAQEBAAF/AQABAQIAAYABAQEAAX8BAAEBAgABgAEBAQABAQEAAQEC
+        AAGAAQECAAGAAQECAAGAAQECAAGAAQECAAGAAQECAAGAAQEB8AEAAYABAQIAAcABAQHwAQABgAEBAYAB
+        AAHAAQEB8AEAAYABAQH+AQABwAEBAfABAAGAAQEB/gEAAcABAQHwAQEBgAEBAf4BAAHAAQMB8AEDAeAB
+        BwH+AQABwAEHAfABBwH4AR8B/wEBAcABDwL/AQABBwGHAf8B/QP/AQABAQEDAf8B+AP/AQABAQIAAfAB
+        fwGAAQEBAAEBAgAB4AEDAwABAQIAAcABAQIAAYABAQGAAX8BgAMAAYABAQEAAf8EAAGAAQEGAAGAAQEG
+        AAGAAQECAAGAAgABAQGAAQEBgAF/AcABAAGAAQcBAAEBAQAB/wHgAQEB4AEHAYABAQIAAfABAwH4AQ8B
+        gAEBAgAB+AEDAv8BgAEBAgAB/AEDAv8B4AEHAYABfwT/AQEB/wHzAv8CgAMAAfMC/wKABAABAQH/AoAE
+        AAEBAd8CgAEAAYACAAEBAQcCgAEAAYADAAEDAQABgAEAAYADAAEBAoABAAGABQABgAEAAYAEAAEPAYAB
+        AAGAAwABgAEPAYABAAGAAgABAQHAAQ8BgAEAAYACAAEBAeABBwGAAQABgAIAAQEB4AEPAYABAAGAAgAB
+        AwHgAQ8BgAEAAYACAAE/AeABDwL/AYABAAGAAT8B8AEfAQAB/wGAAX8B4AEHAv8BAAH/AQABPwHAAQMC
+        /wEAAf8BAAE/AcABAwEAAQEBAAH/AgABwAEDAQABAQEAAQECAAHAAQMBAAEBBAABwAEDAQABAQQAAcAB
+        AwEAAQEEAAHAAQMBAAEBBAABwAEDAQABAQQAAcABAwEAAQEEAAHAAQMBAAEBAfwBAAGAAQABwAEDAQAB
+        AQH8AQAB/gEAAcABAwEAAQEB/AEAAf4BAAHAAQMBAAEfAfwBAAH+AQABwAEDAQABHwH+AQEB/gEAAeAB
+        BwL/Cw==
 </value>
   </data>
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
